tests/invalids/writeStmt.gt
proc main ()
    int m;
begin
    write n := n;
end
